--- a/1.-Python/1.-Snail-and-Well/snail-and-well-Copy1.ipynb
+++ b/1.-Python/1.-Snail-and-Well/snail-and-well-Copy1.ipynb
@@ -30,14 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "well_height = 125\n",
+    "well_height = 0\n",
+    "snail_position = daily_distance + nightly_distance\n",
     "daily_distance = 30\n",
-    "nightly_distance = -20 \n",
-    "snail_position = 0 "
+    "nightly_distance = -20"
    ]
   },
   {
@@ -53,7 +53,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "days = well_height / (daily_distance + nightly_distance) + snail_position"
+    "days = 0\n",
+    "while  well_height <= 125:\n",
+    "    well_height += snail_position\n",
+    "    days += 1\n",
+    "    "
    ]
   },
   {
@@ -69,7 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "days = well_height / (daily_distance + nightly_distance) + snail_position"
+    "13"
    ]
   },
   {
@@ -112,6 +116,8 @@
    "outputs": [],
    "source": [
     "advance_cm = [30, 21, 33, 77, 44, 45, 23, 45, 12, 34, 55]\n",
+    "daily_distance = advance_cm\n",
+    "\n",
     "\n"
    ]
   },
