--- a/1.-Python/1.-Snail-and-Well/snail-and-well-Copy1.ipynb
+++ b/1.-Python/1.-Snail-and-Well/snail-and-well-Copy1.ipynb
@@ -30,14 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "well_height = 0\n",
-    "snail_position = daily_distance + nightly_distance\n",
     "daily_distance = 30\n",
-    "nightly_distance = -20"
+    "nightly_distance = -20\n",
+    "snail_position = daily_distance + nightly_distance\n"
    ]
   },
   {
@@ -49,14 +49,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "days = 0\n",
-    "while  well_height <= 125:\n",
-    "    well_height += snail_position\n",
-    "    days += 1\n",
+    "\n",
     "    "
    ]
   },
@@ -69,11 +67,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "13"
+    "while  well_height <= 125:\n",
+    "    well_height += snail_position\n",
+    "    days += 1"
    ]
   },
   {
@@ -85,9 +85,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n"
+     ]
+    }
+   ],
    "source": [
     "print (days)"
    ]
@@ -115,9 +123,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "advance_cm = [30, 21, 33, 77, 44, 45, 23, 45, 12, 34, 55]\n",
-    "daily_distance = advance_cm\n",
+    "well_height = 0\n",
+    "daily_distance = [30, 21, 33, 77, 44, 45, 23, 45, 12, 34, 55]\n",
+    "nightly_distance = -20\n",
+    "snail_position = daily_distance + nightly_distance\n",
     "\n",
+    "if well_height < 125 \n",
+    "    well_height += snail_position\n",
+    "    days += 1\n",
+    "\n",
+    "\n",
+    "else well_height >= 125\n",
+    "    print(\"the snail came out of the well after\",days,\"days\")\n",
     "\n"
    ]
   },
@@ -134,7 +151,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "if \n",
+    "\n",
+    "\n",
+    "else \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -148,7 +170,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "len()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -162,7 +186,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "modulo % "
+   ]
   }
  ],
  "metadata": {
