--- a/1.-Python/1.-Snail-and-Well/snail-and-well-Copy1.ipynb
+++ b/1.-Python/1.-Snail-and-Well/snail-and-well-Copy1.ipynb
@@ -119,23 +119,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
-    "well_height = 0\n",
-    "daily_distance = [30, 21, 33, 77, 44, 45, 23, 45, 12, 34, 55]\n",
+    "from statistics import mean,stdev\n",
+    "well_height = 125\n",
+    "daily_distance = 30\n",
     "nightly_distance = -20\n",
+    "advance_cm = [30, 21, 33, 77, 44, 45, 23, 45, 12, 34, 55]\n",
     "snail_position = daily_distance + nightly_distance\n",
     "\n",
-    "if well_height < 125 \n",
-    "    well_height += snail_position\n",
+    "totalcms = 0\n",
+    "\n",
+    "days = 0\n",
+    "count = 0\n",
+    "\n",
+    "snailstillinwell = True\n",
+    "while snailstillinwell:\n",
+    "    totalcms += advance_cm[count]\n",
+    "    if totalcms >= well_height:\n",
+    "        snailstillinwell = False\n",
+    "        break\n",
     "    days += 1\n",
     "\n",
+    "    totalcms += nightly_distance\n",
+    "    if totalcms >= well_height:\n",
+    "        snailstillinwell = False\n",
+    "        break\n",
+    "    count += 1\n",
     "\n",
-    "else well_height >= 125\n",
-    "    print(\"the snail came out of the well after\",days,\"days\")\n",
-    "\n"
+    "print(days)"
    ]
   },
   {
@@ -148,14 +170,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "max distance in day= 77\n",
+      "min distance in day= 12\n"
+     ]
+    }
+   ],
    "source": [
-    "if \n",
-    "\n",
-    "\n",
-    "else \n"
+    "print(\"max distance in day=\",max(advance_cm))\n",
+    "print(\"min distance in day=\",min(advance_cm))"
    ]
   },
   {
@@ -167,11 +196,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "avg distance in day= 38.09090909090909\n"
+     ]
+    }
+   ],
    "source": [
-    "len()"
+    "print(\"avg distance in day=\",mean(advance_cm))"
    ]
   },
   {
@@ -183,12 +220,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "standard deviation distance in day= 17.996969441850734\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"standard deviation distance in day=\",stdev(advance_cm))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "modulo % "
-   ]
+   "source": []
   }
  ],
  "metadata": {
