--- a/1.-Python/3.-Bus/bus.ipynb
+++ b/1.-Python/3.-Bus/bus.ipynb
@@ -52,31 +52,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The number of stops is 1\n",
-      "The number of stops is 2\n",
-      "The number of stops is 3\n",
-      "The number of stops is 4\n",
-      "The number of stops is 5\n",
-      "The number of stops is 6\n",
-      "The number of stops is 7\n",
-      "The number of stops is 8\n",
-      "The number of stops is 9\n"
-     ]
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "total_stop = 0\n",
+    "stops = [(10, 0), (4, 1), (3, 5), (3, 4), (5, 1), (1, 5), (5, 8), (4, 6), (2, 3)]\n",
+    "len(stops)\n",
     "\n",
-    "for stop in stops:\n",
-    "    total_stop += 1\n",
-    "    print('The number of stops is',total_stop)\n",
     "    "
    ]
   },
@@ -90,44 +83,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "For the [10, 0] stop, 10 passengers entered and 0 passengers left the bus\n",
-      "1\n",
-      "For the [4, 1] stop, 4 passengers entered and 1 passengers left the bus\n",
-      "2\n",
-      "For the [3, 5] stop, 3 passengers entered and 5 passengers left the bus\n",
-      "3\n",
-      "For the [3, 4] stop, 3 passengers entered and 4 passengers left the bus\n",
-      "4\n",
-      "For the [5, 1] stop, 5 passengers entered and 1 passengers left the bus\n",
-      "5\n",
-      "For the [1, 5] stop, 1 passengers entered and 5 passengers left the bus\n",
-      "6\n",
-      "For the [5, 8] stop, 5 passengers entered and 8 passengers left the bus\n",
-      "7\n",
-      "For the [4, 6] stop, 4 passengers entered and 6 passengers left the bus\n",
-      "8\n",
-      "For the [2, 3] stop, 2 passengers entered and 3 passengers left the bus\n",
-      "9\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[10, 13, 11, 10, 14, 10, 7, 5, 4]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "total_stop = 0\n",
-    "i = 0\n",
+    "passengers = 0\n",
+    "passengers_by_stop= []\n",
+    "\n",
     "for stop in stops:\n",
-    "            l = list(stop)\n",
-    "            in_i = l[0]\n",
-    "            out_i = l[1]\n",
-    "            print(\"For the {0} stop, {1} passengers entered and {2} passengers left the bus\".format(l, in_i, out_i) )\n",
     "            total_stop += 1\n",
-    "            print(total_stop)"
+    "            passengers += stop [0]\n",
+    "            passengers -= stop[1]\n",
+    "            passengers_by_stop.append(passengers)\n",
+    "\n",
+    "passengers_by_stop\n",
+    "            \n",
+    "            "
    ]
   },
   {
@@ -139,34 +122,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n",
-      "13\n",
-      "11\n",
-      "10\n",
-      "14\n",
-      "10\n",
-      "7\n",
-      "5\n",
-      "4\n"
-     ]
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "bus_capacity = 0\n",
-    "for stop in stops:\n",
-    "    l = list(stop)\n",
-    "    in_i = l[0]\n",
-    "    out_i = l[1]\n",
-    "    bus_capacity += l[0]-l[1]\n",
-    "    print(bus_capacity)\n",
-    "    \n",
+    "max(passengers_by_stop)\n",
     "\n",
     "\n",
     "    "
@@ -181,44 +152,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "0\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'mean' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-85-93b19d6bdd46>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mout_i\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0maverage_capacity\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0min_i\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mout_i\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m         \u001b[0mdeviation\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maverage_capacity\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maverage_capacity\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdeviation\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'mean' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "9.333333333333334"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "average_capacity = 0\n",
-    "deviation = 0\n",
-    "for stop in stops:\n",
-    "    l = list(stop)\n",
-    "    in_i = l[0]\n",
-    "    out_i = l[1]\n",
-    "    if out_i != 0:\n",
-    "        average_capacity += in_i / out_i\n",
-    "        deviation\n",
-    "    print(average_capacity)\n",
-    "    print(deviation)\n",
-    "\n",
-    "\n"
+    "sum(passengers_by_stop)/len(passengers_by_stop)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.197221015541813"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.std(passengers_by_stop)\n"
    ]
   },
   {
