--- a/1.-Python/1.-Snail-and-Well/snail-and-well-Copy1.ipynb
+++ b/1.-Python/1.-Snail-and-Well/snail-and-well-Copy1.ipynb
@@ -119,43 +119,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n"
+      "5\n"
      ]
     }
    ],
    "source": [
     "from statistics import mean,stdev\n",
     "well_height = 125\n",
-    "daily_distance = 30\n",
     "nightly_distance = -20\n",
     "advance_cm = [30, 21, 33, 77, 44, 45, 23, 45, 12, 34, 55]\n",
-    "snail_position = daily_distance + nightly_distance\n",
+    "snail_position = 0\n",
     "\n",
-    "totalcms = 0\n",
+    "\n",
     "\n",
     "days = 0\n",
     "count = 0\n",
     "\n",
     "snailstillinwell = True\n",
     "while snailstillinwell:\n",
-    "    totalcms += advance_cm[count]\n",
-    "    if totalcms >= well_height:\n",
+    "    days +=1\n",
+    "    snail_position += advance_cm[days-1]\n",
+    "    if snail_position >= well_height:\n",
     "        snailstillinwell = False\n",
-    "        break\n",
-    "    days += 1\n",
-    "\n",
-    "    totalcms += nightly_distance\n",
-    "    if totalcms >= well_height:\n",
-    "        snailstillinwell = False\n",
-    "        break\n",
-    "    count += 1\n",
+    "    else :\n",
+    "        snail_position += nightly_distance\n",
     "\n",
     "print(days)"
    ]
@@ -166,6 +160,32 @@
    "source": [
     "#### 2. What is its maximum displacement in one day? And its minimum? Calculate the displacement using only the travel distance of the days used to get out of the well. \n",
     "**Hint**: Remember that displacement means the total distance risen taking into account that the snail slides at night.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "57 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "displacement = 0\n",
+    "active_days = 0\n",
+    "displacement_by_day = []\n",
+    "\n",
+    "while active_days < days : \n",
+    "    active_days += 1\n",
+    "    displacement = advance_cm[active_days-1] + nightly_distance\n",
+    "    displacement_by_day.append(displacement)\n",
+    "    \n",
+    "print(max(displacement_by_day), min(displacement_by_day))"
    ]
   },
   {
